--- a/tethysapp/landchange_learner/templates/landchange_learner/home.html
+++ b/tethysapp/landchange_learner/templates/landchange_learner/home.html
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block app_content %}
-  {% gizmo landchange_map %}
-  {% gizmo latitude %}
-  {% gizmo longitude %}
+	{% gizmo landchange_map %}
+	{% gizmo startdatepicker %}
+	{% gizmo enddatepicker %}
 {% endblock %}
 
 {# Use the after_app_content block for modals #}
@@ -40,10 +40,14 @@
 {% endblock %}
 
 {% block app_actions %}
-  {% gizmo save_button %}
+	{% gizmo get_ndvi_button %}
 {% endblock %}
 
 {% block styles %}
 {{ block.super }}
 <link href="{% static 'landchange_learner/css/map.css' %}" rel="stylesheet" />
+{% endblock %}
+{% block scripts %}
+  {{ block.super }}
+  <script src="{% static 'landchange_learner/js/main.js' %}" type="text/javascript"></script>
 {% endblock %}
